tweak: reduce captain armor size

--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -237,7 +237,7 @@
 
 
 - type: entity
-  parent: ClothingOuterBaseMedium
+  parent: ClothingOuterBase
   id: ClothingOuterArmorCaptainCarapace
   name: captain's carapace
   description: An armored chestpiece that provides protection whilst still offering maximum mobility and flexibility. Issued only to the station's finest.
