fix: fix wt550 magazine stored rotation

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/pistol.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Magazines/pistol.yml
@@ -123,6 +123,8 @@
     magState: mag
     steps: 5
     zeroVisible: false
+  - type: Item
+    storedRotation: 90
   - type: Appearance
   - type: ContainerContainer
     containers:
