--- a/Resources/Prototypes/SoundCollections/lobby.yml
+++ b/Resources/Prototypes/SoundCollections/lobby.yml
@@ -5,34 +5,39 @@
 - type: soundCollection
   id: LobbyMusicMeme
   files:
-   - /Audio/Lobby/govnovoz.ogg
-   - /Audio/Lobby/govnovoz2.ogg
-   - /Audio/Lobby/govnovoz3.ogg
-   - /Audio/Lobby/govnovoz4.ogg
+   - /Audio/Lobby/Meme/Govnovoz1.ogg
+   - /Audio/Lobby/Meme/Govnovoz2.ogg
+   - /Audio/Lobby/Meme/Govnovoz3.ogg
+   - /Audio/Lobby/Meme/Govnovoz.ogg
 
 - type: soundCollection
   id: LobbyMusicSongs
   files:
-  - /Audio/Lobby/spaceoddity.ogg
-  - /Audio/Lobby/space_asshole.ogg
+  - /Audio/Lobby/Songs/SpaceOddity.ogg
+  - /Audio/Lobby/Songs/SpaceAsshole.ogg
+  - /Audio/Lobby/Songs/SpaceShuttle.ogg
+  - /Audio/Lobby/Songs/TheSettler.ogg
+  - /Audio/Lobby/Songs/TheWizard.ogg
+  - /Audio/Lobby/Songs/CircleAroundTheSun.ogg
+  - /Audio/Lobby/Songs/RetroFilk.ogg
 
 - type: soundCollection
   id: LobbyMusicWhite
   files:
-    - /Audio/Lobby/thunderdome.ogg
-    - /Audio/Lobby/singuloose.ogg
-    - /Audio/Lobby/lasers_rip_apart_the_bulkhead.ogg
-    - /Audio/Lobby/every_light_is_blinking_at_once.ogg
-    - /Audio/Lobby/atomicamnesiammx.ogg
-    - /Audio/Lobby/Spac_Stac.ogg
-    - /Audio/Lobby/comet_haley.ogg
+    - /Audio/Lobby/White/thunderdome.ogg
+    - /Audio/Lobby/White/singuloose.ogg
+    - /Audio/Lobby/White/lasers_rip_apart_the_bulkhead.ogg
+    - /Audio/Lobby/White/every_light_is_blinking_at_once.ogg
+    - /Audio/Lobby/White/atomicamnesiammx.ogg
+    - /Audio/Lobby/White/Spac_Stac.ogg
+    - /Audio/Lobby/White/comet_haley.ogg
 
 - type: soundCollection
   id: LobbyMusicSS13
   files:
-    - /Audio/Lobby/title2.ogg
-    - /Audio/Lobby/title3.ogg
-    - /Audio/Lobby/absconditus.ogg
-    - /Audio/Lobby/endless_space.ogg
-    - /Audio/Lobby/mod.flip-flap.ogg
-    - /Audio/Lobby/pwmur.ogg
+    - /Audio/Lobby/SS13/title2.ogg
+    - /Audio/Lobby/SS13/title3.ogg
+    - /Audio/Lobby/SS13/absconditus.ogg
+    - /Audio/Lobby/SS13/endless_space.ogg
+    - /Audio/Lobby/SS13/mod.flip-flap.ogg
+    - /Audio/Lobby/SS13/pwmur.ogg
