- tweak: Fun tweaks.

--- a/Resources/Prototypes/Entities/Objects/Fun/darts.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/darts.yml
@@ -127,6 +127,7 @@
   - type: SolutionInjectOnEmbed
     transferAmount: 7
     solution: melee
+    blockSlots: NONE
   - type: SolutionTransfer
     maxTransferAmount: 7
 
