--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -145,6 +145,7 @@
     - cell_slot
   - type: Lock
     locked: true
+    breakOnEmag: false
   - type: ActivatableUIRequiresLock
   - type: LockedWiresPanel
   - type: Damageable
