add: notification upon head arrival

--- a/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
+++ b/Resources/Prototypes/Roles/Jobs/Cargo/quartermaster.yml
@@ -15,6 +15,7 @@
   weight: 10
   startingGear: QuartermasterGear
   icon: "JobIconQuarterMaster"
+  announcementPrototype: QuartermasterArrivalNotification
   supervisors: job-supervisors-captain
   whitelistedSpecies:
     - Human
