--- a/Resources/Prototypes/Roles/Jobs/Justice/inspector.yml
+++ b/Resources/Prototypes/Roles/Jobs/Justice/inspector.yml
@@ -14,6 +14,7 @@
       time: 36000 #10 hrs
   startingGear: InspectorGear
   icon: "JobIconInspector"
+  announcementPrototype: InspectorArrivalNotification
   supervisors: job-supervisors-captain
   access:
     - Service
