--- a/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/head_of_security.yml
@@ -16,6 +16,7 @@
   startingGear: HoSGear
   icon: "JobIconHeadOfSecurity"
   requireAdminNotify: true
+  announcementPrototype: HeadOfSecurityArrivalNotification
   supervisors: job-supervisors-captain
   whitelistedSpecies:
     - Human
