--- a/Resources/Prototypes/Roles/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/captain.yml
@@ -20,6 +20,7 @@
   icon: "JobIconCaptain"
   requireAdminNotify: true
   joinNotifyCrew: true
+  announcementPrototype: CaptainArrivalNotification
   supervisors: job-supervisors-centcom
   whitelistedSpecies:
     - Human
