--- a/Resources/Prototypes/Roles/Jobs/Engineering/chief_engineer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/chief_engineer.yml
@@ -16,6 +16,7 @@
   startingGear: ChiefEngineerGear
   icon: "JobIconChiefEngineer"
   requireAdminNotify: true
+  announcementPrototype: ChiefEngineerArrivalNotification
   supervisors: job-supervisors-captain
   whitelistedSpecies:
     - Human
