--- a/Resources/Prototypes/Roles/Jobs/Science/research_director.yml
+++ b/Resources/Prototypes/Roles/Jobs/Science/research_director.yml
@@ -13,6 +13,7 @@
   startingGear: ResearchDirectorGear
   icon: "JobIconResearchDirector"
   requireAdminNotify: true
+  announcementPrototype: ResearchDirectorArrivalNotification
   supervisors: job-supervisors-captain
   whitelistedSpecies:
     - Human
