Revert "Constr. graph 2 recipes fix (#401)"
This reverts commit 5832144695ac715a29703cdab04c7bd065080bdf.

--- a/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/potato.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/potato.yml
@@ -65,5 +65,10 @@
               icon:
                 sprite: Objects/Misc/stock_parts.rsi
                 state: capacitor
+            - tag: CapacitorStockPart
+              name: capacitor
+              icon:
+                sprite: Objects/Misc/stock_parts.rsi
+                state: capacitor
     - node: potatoaichip
       entity: PotatoAIChip
