--- a/Resources/Prototypes/Recipes/Construction/Graphs/clothing/medsec_hud.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/clothing/medsec_hud.yml
@@ -32,5 +32,12 @@
               icon:
                 sprite: Objects/Misc/stock_parts.rsi
                 state: capacitor
+              doAfter: 5
+            - tag: CapacitorStockPart
+              name: capacitor
+              icon:
+                sprite: Objects/Misc/stock_parts.rsi
+                state: capacitor
+              doAfter: 5
     - node: medsecHud
       entity: ClothingEyesHudMedSec
