--- a/Resources/Prototypes/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/pets.yml
@@ -827,7 +827,6 @@
   id: MobGnome
   description: "A garden's trusty helper"
   components:
-  - type: CombatMode
   - type: Inventory
     templateId: gnome
     speciesId: gnome
@@ -963,7 +962,7 @@
       types:
         Blunt: 20
     soundHit:
-      collection: GnomesDeathCollection
+      collection: GlassBreak
   - type: Vocal
     sounds:
       Male: Gnome
@@ -992,6 +991,8 @@
   - type: DeathGasps
     deathSounds:
       collection: GnomesDeathCollection
+    canOtherHearDeathSound: True
   - type: Thieving
     stripTimeReduction: 4
+  - type: Pacified
 
