--- a/Resources/Prototypes/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/pets.yml
@@ -858,6 +858,8 @@
     allowMovement: true
     name: ghost-role-information-gnome-name
     description: ghost-role-information-gnome-description
+    raffle:
+      settings: short
   - type: GhostTakeoverAvailable
   - type: Flashable
   - type: Tag
