holymelons are holy now

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1765,6 +1765,7 @@
   - type: SliceableFood
     count: 5
     slice: FoodHolymelonSlice
+  - type: HolyWeapon
   - type: Tag
     tags:
     - Fruit
