fix: constructs are cultists now

--- a/Resources/Prototypes/_White/Entities/Cult/constructs.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/constructs.yml
@@ -79,6 +79,8 @@
         - DoorBumpOpener
     - type: NameIdentifier
       group: Construct
+    - type: GlobalAntagonist
+      antagonistPrototype: globalAntagonistCult
 
 - type: entity
   id: JuggernautConstruct
