--- a/Resources/Prototypes/Roles/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/captain.yml
@@ -20,7 +20,7 @@
   icon: "JobIconCaptain"
   requireAdminNotify: true
   joinNotifyCrew: true
-  announcementPrototype: CaptainArrivalNotification
+  arrivalNotificationPrototype: CaptainArrivalNotification
   supervisors: job-supervisors-centcom
   whitelistedSpecies:
     - Human
