--- a/Resources/Prototypes/Roles/Jobs/Engineering/chief_engineer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/chief_engineer.yml
@@ -16,7 +16,7 @@
   startingGear: ChiefEngineerGear
   icon: "JobIconChiefEngineer"
   requireAdminNotify: true
-  announcementPrototype: ChiefEngineerArrivalNotification
+  arrivalNotificationPrototype: ChiefEngineerArrivalNotification
   supervisors: job-supervisors-captain
   whitelistedSpecies:
     - Human
