--- a/Resources/Prototypes/Roles/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Roles/Jobs/Medical/chief_medical_officer.yml
@@ -14,7 +14,7 @@
   weight: 10
   startingGear: CMOGear
   icon: "JobIconChiefMedicalOfficer"
-  announcementPrototype: ChiefMedicalOfficerArrivalNotification
+  arrivalNotificationPrototype: ChiefMedicalOfficerArrivalNotification
   requireAdminNotify: true
   supervisors: job-supervisors-captain
   whitelistedSpecies:
