tweak: now bola fits in belt

--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -519,6 +519,7 @@
         - SmokeOnTrigger
         - Flash
         - Handcuff
+        - Ensnaring
   - type: ItemMapper
     mapLayers:
       flashbang:
