add: energy bola

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
@@ -7,7 +7,7 @@
     SmokeGrenade: 6
     GrenadeStinger: 4
     Flash: 7
-    Bola: 7
+    EnergyBola: 7
     Tourniquet: 7
     FlashlightSeclite: 5
     ClothingEyesGlassesSunglasses: 2
