--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/bola.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/bola.yml
@@ -65,3 +65,34 @@
       walkSpeed: 0.5
       sprintSpeed: 0.5
       canThrowTrigger: true
+
+- type: entity
+  parent: Bola
+  id: EnergyBola
+  name: Bola
+  description: Linked together with some spare cuffs and metal.
+  components:
+  - type: Item
+    size: Small
+  - type: Sprite
+    sprite: White/Objects/Weapons/Throwable/energybola.rsi
+  - type: Ensnaring
+    freeTime: 1
+    breakoutTime: 2
+    walkSpeed: 0.8
+    sprintSpeed: 0.8
+    staminaDamage: 33
+  - type: EmitSoundOnLand
+    collection: sparks
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 10
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: EnergyMiss
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: KnockdownOnCollide
