add: add translation for accents

--- a/Resources/Prototypes/Accents/word_replacements.yml
+++ b/Resources/Prototypes/Accents/word_replacements.yml
@@ -227,6 +227,9 @@
     accent-dwarf-words-146: accent-dwarf-words-replace-146
     accent-dwarf-words-147: accent-dwarf-words-replace-147
     accent-dwarf-words-148: accent-dwarf-words-replace-148
+    accent-dwarf-words-149: accent-dwarf-words-replace-148
+    accent-dwarf-words-150: accent-dwarf-words-replace-148
+    accent-dwarf-words-151: accent-dwarf-words-replace-148
 
 - type: accent
   id: pirate
